--- a/base/css/style.css
+++ b/base/css/style.css
@@ -234,6 +234,7 @@ textarea {
   - 버튼
   - 체크박스
   - 셀렉트박스
+  - 라디오버튼
   - 지도에서 사용하는 UI
   - 레이블 + form 요소
   - 테이블
@@ -527,6 +528,38 @@ textarea {
   border-color: #e8e8e8;
   background-color: #f8f8f8;
   opacity: 1;
+}
+
+/* 라디오버튼 */
+.radio-txt {
+  position: relative;
+  display: inline-block;
+}
+.radio-txt input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
+.radio-txt input:checked + span {
+  color: #fff;
+  background: #1e5f8d;
+}
+.radio-txt span {
+  display: inline-block;
+  padding: 1rem;
+  border: 1px solid #1e5f8d;
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: #1e5f8d;
+  text-align: center;
+  -webkit-transition: background 0.2s;
+  transition: background 0.2s;
+}
+.radio-txt.rounded span {
+  border-radius: 0.5rem;
 }
 
 /* 지도에서 사용하는 UI */
@@ -1517,6 +1550,52 @@ textarea {
 }
 .gnb .aside {
   margin-top: auto;
+}
+
+/* 텍스트 디자인으로 구성된 라디오 버튼 그룹 */
+.unit-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
+  gap: 0.4rem 0;
+}
+.unit-group .bind {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
+  gap: 0 1rem;
+}
+.unit-group .bind .radio-txt {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+.unit-group .bind .radio-txt span {
+  display: block;
 }
 
 /*---------------------------------------------------------------
