--- a/base/css/style.css
+++ b/base/css/style.css
@@ -350,6 +350,15 @@ input[type=date] {
   background-position: 0 0;
   background-size: contain;
 }
+.ico-wastebasket {
+  display: inline-block;
+  width: 1.4rem;
+  height: 1.4rem;
+  background-image: url("/base/images/icon_wastebasket.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
 
 .ui.breadcrumb {
   display: block;
@@ -386,6 +395,10 @@ input[type=date] {
   padding: 0;
   border-radius: 0;
   border-color: #e0e0e0;
+}
+.ui.input.rounded.xs input {
+  line-height: 2.4rem;
+  font-size: 1.2rem;
 }
 .ui.input.rounded input {
   padding: 0 1rem;
@@ -511,6 +524,23 @@ input[type=date] {
   color: #fff;
 }
 .btn-small:hover {
+  color: #fff;
+}
+.btn-md {
+  display: inline-block;
+  padding: 0.4rem 1rem;
+  line-height: 1.3rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  border-radius: 0.5rem;
+  border: 1px solid #2f6993;
+  background: #fff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.btn-md.bg-navy {
+  background: #1e5f8d;
+  border: 0;
   color: #fff;
 }
 
@@ -699,6 +729,35 @@ input[type=date] {
   height: 10rem;
   vertical-align: top;
 }
+.data-tbl-gray {
+  height: 26.4rem;
+  overflow-y: auto;
+  border-top: 1px solid #cbcbcb;
+  border-bottom: 1px solid #cbcbcb;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.data-tbl-gray table thead {
+  position: sticky;
+  top: 0;
+}
+.data-tbl-gray table thead th {
+  padding: 1rem 0;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #6d6d6d;
+  background: #f8f8f8;
+}
+.data-tbl-gray table tbody td {
+  padding: 0.73rem 0;
+  text-align: center;
+  font-size: 1.4rem;
+  color: #727272;
+  border-bottom: 1px solid #e8e8e8;
+}
+.data-tbl-gray table tbody tr:last-child td {
+  border-bottom: 0;
+}
 
 .ui.tabular.menu.rounded {
   display: -webkit-box;
@@ -823,6 +882,16 @@ input[type=date] {
   border-color: #e8e8e8;
   background-color: #f8f8f8;
   opacity: 1;
+}
+.selectbox-wrap.xs select {
+  min-width: 6rem;
+  padding: 0.4rem 0.5rem;
+  font-size: 1.2rem;
+  color: #1e5f8d;
+  border-radius: 0.5rem;
+  border-color: #1e5f8d;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 /* 라디오버튼 */
@@ -2046,19 +2115,19 @@ input[type=date] {
 .wrapper {
   min-height: 100%;
 }
-.wrapper.is-crossroad-view.is-fold .crossroad-view-container {
-  left: -36.8rem;
+.wrapper.is-search-view.is-fold .search-view-container {
+  left: -29.6rem;
 }
-.wrapper.is-crossroad-view.is-fold .crossroad-view-container .btn-crossroad-view::before {
+.wrapper.is-search-view.is-fold .search-view-container .btn-search-view::before {
   -webkit-transform: rotate(180deg);
       -ms-transform: rotate(180deg);
           transform: rotate(180deg);
 }
-.wrapper.is-crossroad-view.is-fold .ly-map {
+.wrapper.is-search-view.is-fold .ly-map {
   margin-left: 5.4rem;
 }
-.wrapper.is-crossroad-view.is-fold.is-hover .crossroad-view-container {
-  left: -24.3rem;
+.wrapper.is-search-view.is-fold.is-hover .search-view-container {
+  left: -17.1rem;
 }
 
 .ly-container {
@@ -2085,6 +2154,10 @@ input[type=date] {
   width: 100%;
   height: calc(99.9vh - 20px);
   margin-left: 5.4rem;
+}
+.ly-map.temp-map {
+  background: url(/base/images/temp/traffic_img.png) no-repeat 0 0;
+  background-size: cover;
 }
 .ly-map .ico-cw {
   position: absolute;
@@ -2398,145 +2471,6 @@ input[type=date] {
 .gnb .aside .current-time span {
   display: block;
   letter-spacing: -0.06rem;
-}
-
-/* 지도 > 교차로 상세 메뉴 */
-/** 통계 **/
-.crossroad-view-container {
-  position: fixed;
-  left: 5.4rem;
-  top: 0;
-  z-index: 8;
-  width: 42.2rem;
-  height: calc(100% - 2rem);
-  background: #fff;
-  -webkit-box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.25);
-  -webkit-transition: left 0.2s;
-  transition: left 0.2s;
-}
-.crossroad-view-container > h2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  gap: 0 0.6rem;
-  padding: 4rem 2.4rem 1.8rem 2.4rem;
-  font-size: 2rem;
-  font-weight: 600;
-  color: #858585;
-}
-.crossroad-view-container > h2::before {
-  content: "";
-  display: block;
-  width: 0.5rem;
-  height: 1.4rem;
-  background-image: url("/base/images/icon_dot_double.png");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  background-size: contain;
-}
-.crossroad-view-container .tab.segment > section > .tit {
-  display: block;
-  margin-bottom: 1.5rem;
-  font-size: 2rem;
-  font-weight: 600;
-  color: #6d6d6d;
-}
-.crossroad-view-container .display-info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  margin-bottom: 1rem;
-}
-.crossroad-view-container .display-info .left {
-  color: #1e5f8d;
-  font-size: 2rem;
-  font-weight: 500;
-}
-.crossroad-view-container .display-info .left em {
-  font-size: 2.8rem;
-  font-weight: 700;
-}
-.crossroad-view-container .progress-bar {
-  margin-bottom: 1.4rem;
-}
-.crossroad-view-container .stats-traffic {
-  padding: 3.7rem 4rem 3.1rem;
-  border-bottom: 1px solid #dcdcdc;
-}
-.crossroad-view-container .stats-speed {
-  padding: 2.6rem 4rem;
-  border-bottom: 1px solid #dcdcdc;
-}
-.crossroad-view-container .stats-speed .display-info .left em i {
-  font-size: 2.2rem;
-}
-.crossroad-view-container .stats-speed .chart-container {
-  height: 14.4rem;
-}
-.crossroad-view-container .stats-los {
-  padding: 2.6rem 4rem;
-}
-.crossroad-view-container .stats-los .display-info .left em {
-  font-size: 3.2rem;
-  color: #e57003;
-}
-.crossroad-view-container .stats-los .chart-container {
-  height: 15rem;
-}
-.crossroad-view-container .chart-container .dummy-img {
-  display: block;
-}
-.crossroad-view-container .btn-crossroad-view {
-  position: absolute;
-  top: 50%;
-  right: -2.4rem;
-  width: 2.4rem;
-  height: 6rem;
-  margin-top: -3rem;
-  border-radius: 0rem 0.5rem 0.5rem 0rem;
-  background: #fff;
-  border: 1px solid #c9c9c9;
-  -webkit-box-shadow: 4px 2px 8px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 4px 2px 8px 0px rgba(0, 0, 0, 0.25);
-}
-.crossroad-view-container .btn-crossroad-view::before {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin-left: -0.3rem;
-  margin-top: -0.95rem;
-  width: 0.6rem;
-  height: 1.9rem;
-  background-image: url("/base/images/arr_left_gray.png");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  background-size: contain;
 }
 
 /* 지도 > 검색 */
@@ -3129,13 +3063,5 @@ input[type=date] {
   /* gnb : 높이 값 조정 */
   .gnb {
     height: 100%;
-  }
-  /* 교차로 통계 메뉴 : scroll-y값 추가 */
-  .crossroad-view-container {
-    height: 100%;
-  }
-  .crossroad-view-container .ui.tab.segment {
-    overflow-y: auto;
-    max-height: calc(100% - 118.45px);
   }
 }
