--- a/base/css/style.css
+++ b/base/css/style.css
@@ -543,6 +543,16 @@ input[type=date] {
   border: 0;
   color: #fff;
 }
+.btn-data-search {
+  min-width: 6.2rem;
+  line-height: 2.8rem;
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: 500;
+  color: #fff;
+  border-radius: 0.3rem;
+  background: #999999;
+}
 
 .ui.buttons.basic {
   border: 0;
@@ -870,6 +880,15 @@ input[type=date] {
   border: 1px solid #e0e0e0;
   font-size: 1.8rem;
   color: #1e5f8d;
+}
+.selectbox-wrap.primary.label-none select {
+  min-width: 14rem;
+  height: 3.4rem;
+  padding: 0 2.5rem 0 1rem;
+  border-color: #cbcbcb;
+  color: #727272;
+  font-weight: 500;
+  background-image: url(/base/images/arr_down_gray.png);
 }
 .selectbox-wrap.rounded select {
   border-radius: 0.5rem;
@@ -1471,7 +1490,7 @@ input[type=date] {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  gap: 0 1.8rem;
+  gap: 0 1rem;
 }
 .filter-grouop .label-dropdown,
 .filter-grouop .label-input {
@@ -1498,10 +1517,14 @@ input[type=date] {
           align-items: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  gap: 0 1.6rem;
-  height: 3rem;
-  padding: 0 0.8rem;
-  border: 1px solid #e0e0e0;
+  gap: 0 0.6rem;
+  margin-left: 2.4rem;
+}
+.filter-grouop .date-group input {
+  width: 13.25rem;
+  height: 3.4rem;
+  padding: 0 1rem;
+  border: 1px solid #cbcbcb;
 }
 .filter-grouop .date-group i {
   font-size: 1.6rem;
@@ -1514,7 +1537,7 @@ input[type=date] {
   padding-right: 0.5rem;
   font-size: 1.6rem;
   color: #727272;
-  background: url(/base/images/icon_calendar.png) no-repeat right center;
+  background: url(/base/images/icon_calendar.png) no-repeat right 0.5rem center;
   background-size: 1.8rem 1.8rem;
 }
 .input-date::-webkit-calendar-picker-indicator {
@@ -1788,6 +1811,12 @@ input[type=date] {
   position: sticky;
   top: 0;
   z-index: 1;
+}
+.data-tbl-very tbody tr.active td {
+  background: #f8f8f8 !important;
+}
+.data-tbl-very tbody td {
+  cursor: pointer;
 }
 .data-tbl-very.md {
   height: auto;
@@ -2174,8 +2203,11 @@ input[type=date] {
   margin-left: 5.4rem;
   padding: 0 6rem;
 }
+.ly-sub.bg-gray {
+  background: #f8f8f8;
+}
 .ly-setting .ui.breadcrumb {
-  padding: 3.6rem 0 3.5rem;
+  padding: 3.6rem 0 3.7rem;
 }
 .ly-setting .filter-grouop {
   margin-bottom: 3.7rem;
